--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,36 @@
 <html>
   <head>
     <title>OmoideApp</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+
+    <!-- Bootstrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+      <div class="container">
+        <%= link_to "OMOIDE", root_path, class: "navbar-brand", style: "font-size: 2rem;" %>
+
+        <div class="d-flex gap-2">
+          <%= link_to "ホーム", root_path, class: "btn btn-outline-primary btn-lg", style: "font-size: 1.2rem;" %>
+
+          <% if user_signed_in? %>
+            <%= link_to "投稿する", new_post_path, class: "btn btn-success btn-lg", style: "font-size: 1.2rem;" %>
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-outline-danger btn-lg", style: "font-size: 1.2rem;" %>
+          <% else %>
+            <%= link_to "ログイン", new_user_session_path, class: "btn btn-outline-success btn-lg", style: "font-size: 1.2rem;" %>
+            <%= link_to "新規登録", new_user_registration_path, class: "btn btn-primary btn-lg", style: "font-size: 1.2rem;" %>
+          <% end %>
+        </div>
+      </div>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
