--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,10 +1,17 @@
-<h1>Editing post</h1>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow-lg border-0" style="background-color: #fefefe;">
+        <div class="card-body p-5">
+          <h2 class="card-title text-center mb-5" style="font-size: 2.5rem;">投稿を編集する</h2>
 
-<%= render "form", post: @post %>
+          <%= render "form", post: @post %>
 
-<br>
-
-<div>
-  <%= link_to "Show this post", @post %> |
-  <%= link_to "Back to posts", posts_path %>
+          <div class="text-center mt-4">
+            <%= link_to "トップに戻る", root_path, class: "btn btn-outline-secondary btn-lg", style: "font-size: 1.3rem;" %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
