--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,50 @@
-<p style="color: green"><%= notice %></p>
+<div class="container mt-5">
+  <h1 class="text-center mb-5" style="font-size: 2.5rem;">みんなの昔ばなし</h1>
 
-<h1>Posts</h1>
+  <% if @posts.empty? %>
+    <p class="text-center" style="font-size: 1.5rem;">まだ投稿がありません。最初の思い出を残しましょう！</p>
+  <% else %>
+    <div class="row">
+      <% @posts.each do |post| %>
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="card shadow-sm h-100" style="background-color: #fef9f4;">
+            <div class="card-body d-flex flex-column">
 
-<div id="posts">
-  <% @posts.each do |post| %>
-    <%= render post %>
-    <p>
-      <%= link_to "Show this post", post %>
-    </p>
+              <% if post.image.attached? %>
+                <div class="mb-3 text-center">
+                  <%= image_tag post.image.variant(resize_to_limit: [300, 300]), class: "img-fluid rounded" %>
+                </div>
+              <% end %>
+
+              <h5 class="card-title" style="font-size: 1.5rem;">
+                <%= link_to post.title, post_path(post), class: "stretched-link text-decoration-none text-dark" %>
+              </h5>
+
+              <p class="card-text mt-3" style="font-size: 1.2rem;">
+                <%= truncate(post.body, length: 100) %>
+              </p>
+
+            </div>
+
+            <div class="card-footer text-muted small">
+              <span style="font-size: 1.1rem;">
+                投稿者: <%= post.user&.name || "ゲスト" %> ／ <%= post.created_at.strftime("%Y/%m/%d") %>
+              </span>
+            </div>
+
+          </div>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+
+  <% if user_signed_in? %>
+    <div class="text-center mt-5">
+      <%= link_to "＋思い出を投稿する", new_post_path, class: "btn btn-lg btn-success", style: "font-size: 1.5rem;" %>
+    </div>
+  <% else %>
+    <div class="text-center mt-5">
+      <%= link_to "ログインして投稿する", new_user_session_path, class: "btn btn-lg btn-outline-primary", style: "font-size: 1.5rem;" %>
+    </div>
   <% end %>
 </div>
-
-<%= link_to "New post", new_post_path %>
