--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,30 @@
-<p style="color: green"><%= notice %></p>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow-lg border-0" style="background-color: #fefefe;">
+        <div class="card-body p-5 text-center">
 
-<%= render @post %>
+          <h2 class="card-title mb-4" style="font-size: 2.5rem;"><%= @post.title %></h2>
 
-<div>
-  <%= link_to "Edit this post", edit_post_path(@post) %> |
-  <%= link_to "Back to posts", posts_path %>
+          <% if @post.image.attached? %>
+            <div class="mb-4">
+              <%= image_tag @post.image.variant(resize_to_limit: [500, 500]), class: "img-fluid rounded" %>
+            </div>
+          <% end %>
 
-  <%= button_to "Destroy this post", @post, method: :delete %>
+          <p class="lead" style="font-size: 1.4rem;"><%= simple_format(@post.body) %></p>
+
+          <div class="mt-5 d-flex justify-content-center gap-3">
+            <%= link_to "編集する", edit_post_path(@post), class: "btn btn-outline-primary btn-lg" %>
+            <%= link_to "投稿一覧へ戻る", posts_path, class: "btn btn-outline-secondary btn-lg" %>
+          </div>
+
+          <div class="mt-3">
+            <%= button_to "投稿を削除する", @post, method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-danger btn-lg" %>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
